--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html class="no-js" lang="en" >
+<html class="no-js" lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,15 +9,15 @@
     <link href='https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css' rel='stylesheet' type='text/css'>
     <SCRIPT LANGUAGE=JAVASCRIPT>
 <!--
-if (top.frames.length!=0)
-  top.location=self.document.location;
-// -->
+        if (top.frames.length != 0)
+            top.location = self.document.location;
+        // -->
     </SCRIPT>
-    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/foundation.js"></script>
     <script data-require="angular.js@1.2.x" src="https://code.angularjs.org/1.2.15/angular.js" data-semver="1.2.15"></script>
     <script>
-            $(document).foundation();
+        $(document).foundation();
     </script>
 
     <style>
@@ -59,7 +59,7 @@ if (top.frames.length!=0)
     </div>
     <div class="row small-up-1 medium-up-2 large-up-3">
         <!--  Application Container  -->
-        <div class="column" >
+        <div class="column">
             <div class="callout">
                 <!-- $index Practice:  -->
                 <p>
@@ -69,7 +69,7 @@ if (top.frames.length!=0)
                 <!-- Image Gallery  -->
                 <div>
                     <div class="img-wrap">
-                        <a href="#"> <img src="http://placehold.it/400x370&text=Coming Soon" class="img-thumbnail center-block" /></a>
+                        <a href="#"> <img src="https://placehold.co/400x370?text=Coming+Soon" class="img-thumbnail center-block" /></a>
                     </div>
 
                 </div>
@@ -82,32 +82,32 @@ if (top.frames.length!=0)
     </div>
     <footer>
         <div class="row expanded callout secondary">
-            <div class="small-6 large-3 columns" >
+            <div class="small-6 large-3 columns">
                 <p class="lead">HUB Activities</p>
                 <ul class="menu vertical">
-                    <li><a href="https://www.servirglobal.net/Global/Activity-Mapper?hub=mesoamerica" >Mesoamerica</a></li>
-                    <li><a href="https://www.servirglobal.net/Global/Activity-Mapper?hub=africa" >Eastern &amp; Southern Africa</a></li>
-                    <li><a href="https://www.servirglobal.net/Global/Activity-Mapper?hub=himalaya" >Himalaya</a></li>
-                    <li><a href="https://www.servirglobal.net/Global/Activity-Mapper?hub=mekong" >Mekong</a></li>
+                    <li><a href="https://www.servirglobal.net/Global/Activity-Mapper?hub=mesoamerica">Mesoamerica</a></li>
+                    <li><a href="https://www.servirglobal.net/Global/Activity-Mapper?hub=africa">Eastern &amp; Southern Africa</a></li>
+                    <li><a href="https://www.servirglobal.net/Global/Activity-Mapper?hub=himalaya">Himalaya</a></li>
+                    <li><a href="https://www.servirglobal.net/Global/Activity-Mapper?hub=mekong">Mekong</a></li>
                 </ul>
             </div>
             <div class="small-6 large-3 columns">
                 <p class="lead ">Our Work</p>
                 <ul class="menu vertical">
-                    
-                    <li><a href="http://catalogue.servirglobal.net/" >Product Catalog</a></li>
-                    <li><a href="https://www.servirglobal.net/Global/Maps-Data/Data-Catalog" >Data Catalog</a></li>
-                    <li><a href="https://www.servirglobal.net/Global/Maps-Data/Interactive-Mapper" >Geoportal</a></li>
-                    <li><a href="https://www.servirglobal.net/data-maps/iserv/" >ISERV Imagery</a></li>
+
+                    <li><a href="http://catalogue.servirglobal.net/">Product Catalog</a></li>
+                    <li><a href="https://www.servirglobal.net/Global/Maps-Data/Data-Catalog">Data Catalog</a></li>
+                    <li><a href="https://www.servirglobal.net/Global/Maps-Data/Interactive-Mapper">Geoportal</a></li>
+                    <li><a href="https://www.servirglobal.net/data-maps/iserv/">ISERV Imagery</a></li>
                 </ul>
             </div>
             <div class="small-6 large-3 columns">
                 <p class="lead">About SERVIR</p>
                 <ul class="menu vertical">
-                    
-                    <li ><a href="https://www.servirglobal.net/about-servir" >About SERVIR</a></li>
-                    <li ><a href="https://www.servirglobal.net/Servir-ast" >SERVIR APPLIED SCIENCES TEAM</a></li>
-                    <li ><a href="https://www.servirglobal.net/about-servir#team" >Our Team</a></li>
+
+                    <li><a href="https://www.servirglobal.net/about-servir">About SERVIR</a></li>
+                    <li><a href="https://www.servirglobal.net/Servir-ast">SERVIR APPLIED SCIENCES TEAM</a></li>
+                    <li><a href="https://www.servirglobal.net/about-servir#team">Our Team</a></li>
                 </ul>
             </div>
             <div class="small-6 large-3 columns">
